# ble-keyboard

./: Cargo.toml  README.md  sdkconfig.defaults
mechanical/reversible_pcb/: reversible_pcb.kicad_pcb  reversible_pcb.kicad_prl  reversible_pcb.kicad_pro  reversible_pcb.kicad_sch
src/: lib.rs  multi_matrix.rs  phantom_matrix.rs  wireless_keyboard.rs  wireless_matrix.rs
src/bkp/: mod.rs
src/bkp/keyboard/: keycombo.rs  keyreport.rs  matrix.rs  mod.rs
src/bkp/keyboard/keys/: mod.rs
