[package]
name = "ble_kdb_rs"
version = "0.1.0"
authors = ["gimmetheveggies"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ble_kdb_rs"
path = "src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "tests"
path = "src/bin/tests.rs"
harness = false

[[bin]]
name = "secondary"
path = "src/bin/secondary.rs"
harness = false

[[bin]]
name = "primary"
path = "src/bin/primary.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc"] }
esp32-nimble = { version = "0.11.0", features = ["std"] }
# esp32-nimble = { path = "../esp32-nimble" }
zerocopy = "0.8.14"
zerocopy-derive = "0.8.14"
anyhow = "1.0.95"
keyboard = { path = "../keyboard" }

[build-dependencies]
embuild = { version = "0.33.0", features = ["espidf"] }
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
